# StockPatternModel

./: .gitignore  README.md  setup.cfg
src/: app.py  main.py
src/DataCollection/: ImportData.py  Stock.py
src/PatternAnalysis/: main.py
src/PatternAnalysis/DataCollection/: ImportData.py
src/PriceAnalysis/: FindPatterns.py  PatternContainers.py  Patterns.py
src/PriceAnalysis/PatternContainers/: GapContainer.py
src/PriceAnalysis/Patterns/: GapPattern.py  Patterns.py
src/StatisticalAnalysis/BackTester/: GapBackTester.py
src/StatisticalAnalysis/DataOrganize/: GapDataOrganize2.py  GapDataOrganizer.py
