[metadata]
name = "PatternAnalysis"
version = "0.0.0"
license = ""
description = "Program to organize and analyze price data from stocks in the S&P500, NASDAQ, and Dow" 
long_description = file: README.rst
author = "Andrew Passero"
author_email = "apassero01@gmail.com"
classifiers=
   "Development Status :: 1 - Planning"

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   "pandas"
   "yfinance"
   "pickle"
   "yahoo_fin"
   "datetime"

[options.packages.find]
where=src